# NFSMW_Settings

./: CMakeLists.txt  NFSMW_Settings.yml
src/: config.c  encode.c  main.c  main.h  patch.c
